styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: "bluuNext", sans-serif;
  background-color: rgb(36, 36, 36);
  // background-image: url("../asset/images/universe.jpeg") no-repeat cover;
  overflow-x: hidden;
}

@font-face {
  font-family: "bluuNext";
  src: url("../asset/bluuNext/bluunext-bolditalic.ttf");
  font-weight: 400;
  font-style: normal;
}
@font-face {
  font-family: "bluuNext";
  src: url("../asset/bluuNext/bluunext-bold.ttf");
  font-weight: 600;
  font-style: normal;
}

h1 {
  font-size: 10rem;
}

.line {
  width: 80%;
  border-bottom: 2px solid white;
  &-top {
    border-bottom: none;
    border-top: 2px solid white;
  }
}

.box {
  width: 300px;
  height: 300px;
  background: white;
}

.name {
  top: 0;
}

.parallax {
  overflow: hidden;
  letter-spacing: -2px;
  line-height: 0.8;
  margin: 1.5rem 0;
  white-space: nowrap;
  display: flex;
  flex-wrap: nowrap;
  position: relative;
  width: 80%;
  .scroller {
    font-size: 64px;
    display: flex;
    white-space: nowrap;
    flex-wrap: nowrap;
    line-height: 1.5;
  }
  .span {
    margin-right: 30px;
    display: block;
  }
}

// //for marquee text
// .marquee {
//   width: 80%;
//   white-space: nowrap;
//   overflow: hidden;
//   position: relative;
//   margin: 2rem 0;
//   .marquee-content {
//     width: 300%;
//     display: flex;
//     line-height: 30px;

//     animation: marquee 15s linear infinite forwards;
//     &:hover {
//       animation-play-state: paused;
//     }
//     .list {
//       display: flex;
//       justify-content: space-around;
//       width: 100%;

//       list-style: none;
//     }
//   }
//   .marquee-reverse {
//     animation: marquee 10s linear infinite backwards;
//   }
// }

// @keyframes marquee {
//   0% {
//     transform: translateX(0);
//   }
//   100% {
//     transform: translateX(-66.6%);
//   }
// }

.contactInput {
  @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all focus:border-green-600/40 focus:text-green-600/40 hover:border-green-600/40;
}

@media (max-width: 989px) {
  h1 {
    font-size: 8rem;
  }

  .contact-box {
    margin-bottom: 3rem;
  }

  .circles {
    width: 700px;
    height: 750px;
    margin-top: 38rem;
    border-radius: 25px;
  }
}

@media (max-width: 796px) {
  h1 {
    font-size: 6rem;
  }

  .circles {
    width: 600px;
    height: 650px;
  }
}
@media (max-width: 599px) {
  h1,
  h2 {
    margin: 1rem 0;
  }
  h1 {
    font-size: 4rem;
  }

  h2 {
    font-size: 3rem;
  }
}

// @media (prefers-color-scheme: dark) {
//   html {
//     color-scheme: dark;
//   }
//   body {
//     color: white;
//     background: black;
//   }
// }

